Made it mobile responsive

--- a/index.html
+++ b/index.html
@@ -17,90 +17,94 @@
 </head>
 
 <body>
-<p id="demo"></p>
-<div id="wrapper">
-	<div class="container-fluid">
-		<div class="row">
-			<div style="padding: 0" class="col-xs-12">
-				<div class="disPlay">
-					<input type="text" id="input" placeholder="0" readonly>
-					<input type="text" id="answer" placeholder="" readonly>
+	<div style="height: 2.5vh;">
+		<marquee>
+			<p id="text">Made with love end enthusiasm by Paulot</p>
+		</marquee>
+	</div>
+	<div id="wrapper">
+		<div class="container-fluid">
+			<div class="row fill-display">
+				<div style="padding: 0" class="col-xs-12">
+					<div class="disPlay">
+						<input type="text" id="input" placeholder="0" readonly>
+						<input type="text" id="answer" placeholder="" readonly>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="">A/C</button>
+			<div class="row">
+				<div class="container-fluid">
+					<div class="row fill-btn">
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="">A/C</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="+/-">+/-</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="%">%</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="/">/</button>
+						</div>
 					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="+/-">+/-</button>
+					<div class="row fill-btn">
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black"value="7">7</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="8">8</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="9">9</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="*">*</button>
+						</div>
 					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="%">%</button>
+					<div class="row fill-btn">
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="4">4</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="5">5</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="6">6</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="-">-</button>
+						</div>
 					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="/">/</button>
+					<div class="row fill-btn">
+						<div class="col-xs-3 no-pad">
+							<button type="button" id="one" class="btn btn-block btn-lg btn-black" value="1">1</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="2">2</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="3">3</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="+">+</button>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black"value="7">7</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="8">8</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="9">9</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="*">*</button>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="4">4</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="5">5</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="6">6</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="-">-</button>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-3 no-pad">
-						<button type="button" id="one" class="btn btn-block btn-lg btn-black" value="1">1</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="2">2</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="3">3</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="+">+</button>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-6 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value="0">0</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-black" value=".">.</button>
-					</div>
-					<div class="col-xs-3 no-pad">
-						<button type="button" class="btn btn-block btn-lg btn-soot" value="=">=</button>
+					<div class="row fill-btn">
+						<div class="col-xs-6 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value="0">0</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-black" value=".">.</button>
+						</div>
+						<div class="col-xs-3 no-pad">
+							<button type="button" class="btn btn-block btn-lg btn-soot" value="=">=</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
   <script src="js/script.js"></script>
 </body>
